# hexeline

./: COPYING  Cargo.toml  DESIGN-II.org  DESIGN.md
src/: boolext.rs  glium_sdl2.rs  intext.rs  main.rs  rpn.rs  simdext.rs
src/gl/: flat.rs  mod.rs  v_flat.glsl
src/graphic/: SHIP-RENDERING.org  error.rs  f_flat.glsl  f_tex.glsl  flat.rs  mod.rs  program.rs  shader.rs  shaders.rs  texture.rs  uniform.rs  v_flat.glsl  v_pos2.glsl  v_pos2tc2.glsl  vao.rs  vbo.rs  vertex.rs
src/physics/: README.org  arena.rs  bounding_rhombus.rs  common_object.rs  composite.rs  coords.rs  defs.rs  entity.rs  event.rs  frac.rs  hexgrid.rs  hilbert_sort.rs  id_free_list.rs  implicit_tree.rs  isqrt.rs  mod.rs  node.rs  packed_struct.rs  particle.rs  pslot.rs  snapshot.rs  trig.rs  trigtab.rs  units.rs  xform.rs
src/physics/extended_object/: debug.rs  mod.rs
src/praef/: defs.rs  front.rs  mod.rs  raw.rs  traits.rs  vnet.rs
