[package]
name = "hexeline"
version = "0.1.0"
authors = ["Jason Lingle <jason@lin.gl>"]

[dependencies]
arc-swap = "0.3.7"
arrayvec = "0.4.10"
bitflags = "1.0.0"
bit-set = "0.5.0"
cgmath = "0.14.1"
env_logger = "0.6.0"
fnv = "1.0"
gl = "0.11.0"
lazy_static  = "1.2"
log = "0.4.6"
odds = "0.2.25"
png = "0.14.0"
sdl2 = "0.32.0"
sdl2-sys = { version = "0.32", features = ["bundled"] }
packed_simd = "0.3.3"
smallvec = "0.6.8"

[dev-dependencies]
proptest = "0.9.1"

[profile.test]
opt-level = 1

[profile.bench]
debug = 2
